Add consistent email changelog styles and update notes
Introduced a shared <style> block for vertical spacing and heading formatting in all HTML changelog snippets and the changelog prompt example. Removed redundant <br /> tags for cleaner markup. Updated the changelog prompt notes to reflect new features, red teaming strategies, and upcoming UX improvements.

--- a/snippets/changelog/2025-05-05.html
+++ b/snippets/changelog/2025-05-05.html
@@ -4,6 +4,23 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Galtea Update - 2025-05-05</title>
+    <style>
+      /* Add a bit of vertical spacing between list items */
+      ul li {
+        margin-bottom: 8px;
+      }
+      /* Avoid extra space after the last item in a list */
+      ul li:last-child {
+        margin-bottom: 0;
+      }
+      h3 {
+        margin-top: 30px;
+        margin-bottom: 0px;
+      }
+      p {
+        margin-top: 10px;
+      }
+    </style>
   </head>
   <body style="margin: 0; padding: 0; text-align: center; font-family: Poppins, Arial, sans-serif">
     <table role="presentation" width="100%" cellspacing="0" cellpadding="0" border="0">
@@ -20,7 +37,6 @@
                 <h1 style="color: #333; font-size: 26px; margin-top: 30px; margin-bottom: 0px">Analytics Upgrades and Red Teaming Test Improvements</h1>
                 <a style="color: #5c5bdd; font-size: 12px; text-decoration: none" href="https://docs.galtea.ai/changelog#2025-05-05">2025-05-05</a>
 
-                <br />
                 <h3 style="color: #333">Analytics Page Upgrades</h3>
                 <p style="color: #444; font-size: 16px">We're continuing to improve the Analytics page to help you extract insights faster:</p>
                 <ul style="color: #444; font-size: 16px">
@@ -32,7 +48,6 @@
                   <img src="https://mintlify.s3.us-west-1.amazonaws.com/galtea/images/changelog/2025-05-05_radar-view.png" alt="Radar View" style="max-width: 100%; height: auto; border-radius: 8px" />
                 </div>
 
-                <br />
                 <h3 style="color: #333">SDK Safeguards</h3>
                 <p style="color: #444; font-size: 16px">We've introduced two improvements to make SDK usage more reliable:</p>
                 <ul style="color: #444; font-size: 16px">
@@ -40,7 +55,6 @@
                   <li><strong>Update Notifications:</strong> Get notified in the console when a newer SDK version is available.</li>
                 </ul>
 
-                <br />
                 <h3 style="color: #333">Improvements in Red Teaming Tests</h3>
                 <ul style="color: #444; font-size: 16px">
                   <li>
@@ -54,7 +68,6 @@
                   </li>
                 </ul>
 
-                <br />
                 <h3 style="color: #333">Bug Fixes</h3>
                 <ul style="color: #444; font-size: 16px">
                   <li><strong>Metric Range Fix:</strong> Default metrics now correctly show 100% as best and 0% as worst.</li>
