--- a/snippets/changelog/2025-05-12.html
+++ b/snippets/changelog/2025-05-12.html
@@ -4,6 +4,23 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Galtea Update - 2025-05-12</title>
+    <style>
+      /* Add a bit of vertical spacing between list items */
+      ul li {
+        margin-bottom: 8px;
+      }
+      /* Avoid extra space after the last item in a list */
+      ul li:last-child {
+        margin-bottom: 0;
+      }
+      h3 {
+        margin-top: 30px;
+        margin-bottom: 0px;
+      }
+      p {
+        margin-top: 10px;
+      }
+    </style>
   </head>
   <body style="margin: 0; padding: 0; text-align: center; font-family: Poppins, Arial, sans-serif">
     <table role="presentation" width="100%" cellspacing="0" cellpadding="0" border="0">
@@ -20,7 +37,6 @@
                 <h1 style="color: #333; font-size: 26px; margin-top: 30px; margin-bottom: 0px">New Conversation Evaluation and Extended Data Generation Capabilities</h1>
                 <a style="color: #5c5bdd; font-size: 12px; text-decoration: none" href="https://docs.galtea.ai/changelog#2025-05-12">2025-05-12</a>
 
-                <br />
                 <h3 style="color: #333">New Conversation Evaluation Metrics</h3>
                 <p style="color: #444; font-size: 16px">
                   You can now <a href="https://docs.galtea.ai/sdk/tutorials/monitor-production-responses-to-user-queries#evaluating-conversations" style="color: #5c5bdd; text-decoration: underline">evaluate conversations</a> with greater precision using these new metrics:
@@ -32,11 +48,9 @@
                   <li><strong>Conversation Relevancy</strong> - Determine if responses remain on-topic and purposeful</li>
                 </ul>
 
-                <br />
                 <h3 style="color: #333">Enhanced Security Framework</h3>
                 <p style="color: #444; font-size: 16px">We've significantly improved user access management by implementing an <strong>Attribute-Based Access Control (ABAC)</strong> strategy, providing more granular control over who can access what within your organization.</p>
 
-                <br />
                 <h3 style="color: #333">Extended Data Generation Capabilities</h3>
                 <p style="color: #444; font-size: 16px">Our data generation tools have been expanded with:</p>
                 <ul style="color: #444; font-size: 16px">
@@ -44,14 +58,12 @@
                   <li><strong>Added support for text-based files</strong> - Upload your knowledge base in virtually any text-based format including JSON, HTML, Markdown, and more</li>
                 </ul>
 
-                <br />
                 <h3 style="color: #333">Improved Test Creation Experience</h3>
                 <p style="color: #444; font-size: 16px">We've enhanced the clarity of threat selection in the Test Creation form. The selection now displays both the threat and which security frameworks that threat covers, making it easier to align your testing with specific security standards.</p>
                 <div style="text-align: center; margin: 10px 0">
                   <img src="https://mintlify.s3.us-west-1.amazonaws.com/galtea/images/changelog/2025-05-12_improved_threat_selection.png" alt="Improved Threat Selection" style="max-width: 100%; height: auto; border-radius: 8px" />
                 </div>
 
-                <br />
                 <h3 style="color: #333">Analytics & Navigation Enhancements</h3>
                 <p style="color: #444; font-size: 16px">We've made several improvements to help you work more efficiently:</p>
                 <ul style="color: #444; font-size: 16px">
@@ -59,7 +71,6 @@
                   <li><strong>Streamlined Navigation:</strong> Clicking the "input" cell in the evaluations table now navigates directly to the associated Test Case</li>
                 </ul>
 
-                <br />
                 <h3 style="color: #333">Bug Fixes & Improvements</h3>
                 <p style="color: #444; font-size: 16px">We've resolved several issues to ensure a smoother experience:</p>
                 <ul style="color: #444; font-size: 16px">
