--- a/snippets/changelog/2025-05-19.html
+++ b/snippets/changelog/2025-05-19.html
@@ -4,6 +4,23 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Galtea Update - 2025-05-19</title>
+    <style>
+      /* Add a bit of vertical spacing between list items */
+      ul li {
+        margin-bottom: 8px;
+      }
+      /* Avoid extra space after the last item in a list */
+      ul li:last-child {
+        margin-bottom: 0;
+      }
+      h3 {
+        margin-top: 30px;
+        margin-bottom: 0px;
+      }
+      p {
+        margin-top: 10px;
+      }
+    </style>
   </head>
   <body style="margin: 0; padding: 0; text-align: center; font-family: Poppins, Arial, sans-serif">
     <table role="presentation" width="100%" cellspacing="0" cellpadding="0" border="0">
@@ -20,14 +37,12 @@
                 <h1 style="color: #333; font-size: 26px; margin-top: 30px; margin-bottom: 0px">Platform Upgrades: Easier Onboarding, Improved UI & Finer Control</h1>
                 <a style="color: #5c5bdd; font-size: 12px; text-decoration: none" href="https://docs.galtea.ai/changelog#2025-05-19">2025-05-19</a>
 
-                <br />
                 <h3 style="color: #333">Streamlined Onboarding and Quicker Starts</h3>
                 <p style="color: #444; font-size: 16px">
                   We've revamped the platform onboarding! It's now more visually intuitive and to help new users get evaluating in no time, we now provide a default <a href="https://docs.galtea.ai/concepts/metric" style="color: #5c5bdd; text-decoration: underline">Metric</a> and a default
                   <a href="https://docs.galtea.ai/concepts/product/test" style="color: #5c5bdd; text-decoration: underline">Test</a>. This makes it easier than ever to get started with Galtea and run your first evaluation quickly.
                 </p>
 
-                <br />
                 <h3 style="color: #333">Deeper Insights with Visible Conversation Turns</h3>
                 <p style="color: #444; font-size: 16px">
                   Understanding the full context of interactions is key. You can now view the complete <a href="https://docs.galtea.ai/sdk/tutorials/evaluating-conversations" style="color: #5c5bdd; text-decoration: underline">conversation turns</a> associated with your
@@ -37,18 +52,15 @@
                   <img src="https://mintlify.s3.us-west-1.amazonaws.com/galtea/images/changelog/2025-05-19_conversation_turns_display.png" alt="Conversation Turns Display in Dashboard" style="max-width: 100%; height: auto; border-radius: 8px" />
                 </div>
 
-                <br />
                 <h3 style="color: #333">Dashboard Usability Boost</h3>
                 <p style="color: #444; font-size: 16px">We're continually refining the Galtea experience. This update brings several UI enhancements across the dashboard, designed to improve overall usability and make your workflow smoother and more intuitive.</p>
 
-                <br />
                 <h3 style="color: #333">Tailor Your Test Generation: Selectable Test Case Counts</h3>
                 <p style="color: #444; font-size: 16px">
                   Gain more control over your testing process! When <a href="https://docs.galtea.ai/sdk/api/test/create" style="color: #5c5bdd; text-decoration: underline">generating tests</a>, you can now specify the exact number of
                   <a href="https://docs.galtea.ai/concepts/product/test/case" style="color: #5c5bdd; text-decoration: underline">test cases</a> you want Galtea to create. This allows you to fine-tune the scope and depth of your tests according to your needs.
                 </p>
 
-                <br />
                 <h3 style="color: #333">Track Your Team's Work: Creator Attribution Displayed</h3>
                 <p style="color: #444; font-size: 16px">
                   Clarity in collaboration is important. Now, the user who created a <a href="https://docs.galtea.ai/concepts/product" style="color: #5c5bdd; text-decoration: underline">Product</a>,
@@ -56,7 +68,6 @@
                   displayed on their respective details pages. This helps in tracking ownership and contributions within your team.
                 </p>
 
-                <br />
                 <h3 style="color: #333">Enhanced Table Functionality for Easier Data Navigation</h3>
                 <p style="color: #444; font-size: 16px">Working with data tables in the dashboard is now more efficient:</p>
                 <ul style="color: #444; font-size: 16px">
