--- a/snippets/changelog/2025-05-26.html
+++ b/snippets/changelog/2025-05-26.html
@@ -4,6 +4,23 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Galtea Update - 2025-05-26</title>
+    <style>
+      /* Add a bit of vertical spacing between list items */
+      ul li {
+        margin-bottom: 8px;
+      }
+      /* Avoid extra space after the last item in a list */
+      ul li:last-child {
+        margin-bottom: 0;
+      }
+      h3 {
+        margin-top: 30px;
+        margin-bottom: 0px;
+      }
+      p {
+        margin-top: 10px;
+      }
+    </style>
   </head>
   <body style="margin: 0; padding: 0; text-align: center; font-family: Poppins, Arial, sans-serif">
     <table role="presentation" width="100%" cellspacing="0" cellpadding="0" border="0">
@@ -20,7 +37,6 @@
                 <h1 style="color: #333; font-size: 26px; margin-top: 30px; margin-bottom: 0px">Enhanced Test Generation & Streamlined Workflow with Code Snippets</h1>
                 <a style="color: #5c5bdd; font-size: 12px; text-decoration: none" href="https://docs.galtea.ai/changelog#2025-05-26">2025-05-26</a>
 
-                <br />
                 <h3 style="color: #333">Improved Test Generation</h3>
                 <p style="color: #444; font-size: 16px">Our test generation capabilities have been significantly upgraded:</p>
                 <ul style="color: #444; font-size: 16px">
@@ -31,7 +47,6 @@
                   <li><strong>Better Synthetic Data:</strong> We've made general improvements to the quality of synthetic data generation, ensuring your tests are more effective and realistic.</li>
                 </ul>
 
-                <br />
                 <h3 style="color: #333">Code Snippets Now Available on the Dashboard</h3>
                 <p style="color: #444; font-size: 16px">We're making it easier than ever to integrate Galtea into your development process!</p>
                 <ul style="color: #444; font-size: 16px">
@@ -42,7 +57,6 @@
                   <img src="https://mintlify.s3.us-west-1.amazonaws.com/galtea/images/changelog/2025-05-26_create_evaluation_snippet.png" alt="Create Evaluation Code Snippet" style="max-width: 100%; height: auto; border-radius: 8px" />
                 </div>
 
-                <br />
                 <h3 style="color: #333">Usability Improvements</h3>
                 <p style="color: #444; font-size: 16px">We've also rolled out several usability enhancements based on your feedback:</p>
                 <ul style="color: #444; font-size: 16px">
