--- a/snippets/changelog/2025-06-02.html
+++ b/snippets/changelog/2025-06-02.html
@@ -4,6 +4,23 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Galtea Update - 2025-06-02</title>
+    <style>
+      /* Add a bit of vertical spacing between list items */
+      ul li {
+        margin-bottom: 8px;
+      }
+      /* Avoid extra space after the last item in a list */
+      ul li:last-child {
+        margin-bottom: 0;
+      }
+      h3 {
+        margin-top: 30px;
+        margin-bottom: 0px;
+      }
+      p {
+        margin-top: 10px;
+      }
+    </style>
   </head>
   <body style="margin: 0; padding: 0; text-align: center; font-family: Poppins, Arial, sans-serif">
     <table role="presentation" width="100%" cellspacing="0" cellpadding="0" border="0">
@@ -21,7 +38,6 @@
                 <h1 style="color: #333; font-size: 26px; margin-top: 30px; margin-bottom: 0px">Platform Robustness & Scaling for the Future</h1>
                 <a style="color: #5c5bdd; font-size: 12px; text-decoration: none" href="https://docs.galtea.ai/changelog#2025-06-02">2025-06-02</a>
 
-                <br />
                 <h3 style="color: #333">This Week: Focus on Stability</h3>
                 <p style="color: #444; font-size: 16px">
                   This week, our team has been dedicated to addressing bugs and increasing the overall robustness of the Galtea platform. While there are no major new features to announce, these improvements are crucial for ensuring a reliable and seamless experience for all users.
@@ -31,7 +47,6 @@
                   <li><strong>Infrastructure Hardening:</strong> Behind the scenes, we have been working on strengthening our systems to better handle increased usage and edge cases.</li>
                 </ul>
 
-                <br />
                 <h3 style="color: #333">Looking Ahead: Scaling & Streamlining</h3>
                 <p style="color: #444; font-size: 16px">
                   Our efforts this week have also been focused on foundational work that will soon allow Galtea to scale more efficiently and deliver even more value to our users. These improvements will enable us to introduce new features and streamline workflows in the near future.
