--- a/snippets/changelog/2025-06-16.html
+++ b/snippets/changelog/2025-06-16.html
@@ -4,6 +4,23 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Galtea Update - 2025-06-16</title>
+    <style>
+      /* Add a bit of vertical spacing between list items */
+      ul li {
+        margin-bottom: 8px;
+      }
+      /* Avoid extra space after the last item in a list */
+      ul li:last-child {
+        margin-bottom: 0;
+      }
+      h3 {
+        margin-top: 30px;
+        margin-bottom: 0px;
+      }
+      p {
+        margin-top: 10px;
+      }
+    </style>
   </head>
   <body style="margin: 0; padding: 0; text-align: center; font-family: Poppins, Arial, sans-serif">
     <table role="presentation" width="100%" cellspacing="0" cellpadding="0" border="0">
@@ -20,14 +37,12 @@
                 <h1 style="color: #333; font-size: 26px; margin-top: 30px; margin-bottom: 0px">Major Platform Overhaul & SDK v2</h1>
                 <a style="color: #5c5bdd; font-size: 12px; text-decoration: none" href="https://docs.galtea.ai/changelog#2025-06-16">2025-06-16</a>
 
-                <br />
                 <h3 style="color: #333">Major Platform Overhaul</h3>
                 <p style="color: #444; font-size: 16px">
                   We've been hard at work reorganizing and expanding the Galtea platform to handle more use cases and prepare for exciting future features. This release brings significant improvements to the <a href="https://platform.galtea.ai/" style="color: #5c5bdd">dashboard</a>,
                   <a href="https://docs.galtea.ai/sdk/introduction" style="color: #5c5bdd">SDK</a>, and test generation.
                 </p>
 
-                <br />
                 <h3 style="color: #333">Dashboard Enhancements</h3>
                 <ul style="color: #444; font-size: 16px">
                   <li>
@@ -44,7 +59,6 @@
                   <li><strong>General Bug Fixes & UX Improvements:</strong> Enjoy smoother interactions, clearer tooltips, and more intuitive code snippets.</li>
                 </ul>
 
-                <br />
                 <h3 style="color: #333">SDK v2 Released</h3>
                 <p style="color: #444; font-size: 16px">
                   The new Galtea SDK v2 is here! It includes breaking changes to simplify workflows and add session support. Check out the
@@ -71,7 +85,6 @@
                   </li>
                 </ul>
 
-                <br />
                 <h3 style="color: #333">Improved Test Case Generation</h3>
                 <ul style="color: #444; font-size: 16px">
                   <li><strong>Smarter Test Coverage:</strong> <a href="https://docs.galtea.ai/concepts/product/test/case" style="color: #5c5bdd">Test cases</a> are now distributed more intelligently across your documents for better coverage based on the number of questions you choose to generate.</li>
