--- a/snippets/changelog/2025-06-30.html
+++ b/snippets/changelog/2025-06-30.html
@@ -4,6 +4,23 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Galtea Update - 2025-06-30</title>
+    <style>
+      /* Add a bit of vertical spacing between list items */
+      ul li {
+        margin-bottom: 8px;
+      }
+      /* Avoid extra space after the last item in a list */
+      ul li:last-child {
+        margin-bottom: 0;
+      }
+      h3 {
+        margin-top: 30px;
+        margin-bottom: 0px;
+      }
+      p {
+        margin-top: 10px;
+      }
+    </style>
   </head>
   <body style="margin: 0; padding: 0; text-align: center; font-family: Poppins, Arial, sans-serif">
     <table role="presentation" width="100%" cellspacing="0" cellpadding="0" border="0">
@@ -20,7 +37,6 @@
                 <h1 style="color: #333; font-size: 26px; margin-top: 30px; margin-bottom: 0px">New Metric, More Red Teaming Strategies and Better Usability</h1>
                 <a style="color: #5c5bdd; font-size: 12px; text-decoration: none" href="https://docs.galtea.ai/changelog#2025-06-30">2025-06-30</a>
 
-                <br />
                 <h3 style="color: #333">Introducing the Factual Accuracy Metric</h3>
                 <p style="color: #444; font-size: 16px">
                   We've added a new <strong>Factual Accuracy</strong> metric to our evaluation toolkit! This metric measures whether the information in your model's output is factually correct when compared to a trusted reference answer. It's particularly valuable for RAG and question answering
@@ -31,7 +47,6 @@
                   <a href="https://docs.galtea.ai/concepts/metric/factual-accuracy" style="color: #5c5bdd">Read the full documentation here</a>.
                 </p>
 
-                <br />
                 <h3 style="color: #333">Enhanced Red Teaming with New Attack Strategies</h3>
                 <p style="color: #444; font-size: 16px">Our red teaming capabilities just got more sophisticated! We've added two powerful new attack strategies:</p>
                 <ul style="color: #444; font-size: 16px">
@@ -43,7 +58,6 @@
                   <a href="https://docs.galtea.ai/concepts/product/test/red-teaming-strategies" style="color: #5c5bdd">Explore all red teaming strategies</a>.
                 </p>
 
-                <br />
                 <h3 style="color: #333">Smarter Red Teaming Test Generation</h3>
                 <p style="color: #444; font-size: 16px">We've significantly improved how red teaming tests are generated. Our system now takes even more factors into account when creating adversarial test cases:</p>
                 <ul style="color: #444; font-size: 16px">
@@ -55,7 +69,6 @@
                   This means your red teaming tests will be more effective at uncovering real vulnerabilities specific to your product. <a href="https://docs.galtea.ai/concepts/product/test/red-teaming-tests" style="color: #5c5bdd">Read more about red teaming tests</a>.
                 </p>
 
-                <br />
                 <h3 style="color: #333">Better Metric Source Visibility and Management</h3>
                 <p style="color: #444; font-size: 16px">Understanding where your metrics come from is now easier than ever! We've enhanced the platform to provide clearer visibility into metric sources:</p>
                 <ul style="color: #444; font-size: 16px">
@@ -73,7 +86,6 @@
                   <li><strong>Established Frameworks:</strong> Metrics adapted from proven evaluation libraries and methodologies</li>
                 </ul>
 
-                <br />
                 <h3 style="color: #333">Platform Usability Improvements</h3>
                 <br />
                 <p style="color: #444; font-size: 16px">Enjoy these improvements!</p>
