--- a/snippets/changelog/2025-07-07.html
+++ b/snippets/changelog/2025-07-07.html
@@ -4,6 +4,23 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Galtea Update - 2025-07-07</title>
+    <style>
+      /* Add a bit of vertical spacing between list items */
+      ul li {
+        margin-bottom: 8px;
+      }
+      /* Avoid extra space after the last item in a list */
+      ul li:last-child {
+        margin-bottom: 0;
+      }
+      h3 {
+        margin-top: 30px;
+        margin-bottom: 0px;
+      }
+      p {
+        margin-top: 10px;
+      }
+    </style>
   </head>
   <body style="margin: 0; padding: 0; text-align: center; font-family: Poppins, Arial, sans-serif">
     <table role="presentation" width="100%" cellspacing="0" cellpadding="0" border="0">
@@ -20,14 +37,12 @@
                 <h1 style="color: #333; font-size: 26px; margin-top: 30px; margin-bottom: 0px">Custom Threats, New Metrics, and Enhanced Test Case Management</h1>
                 <a style="color: #5c5bdd; font-size: 12px; text-decoration: none" href="https://docs.galtea.ai/changelog#2025-06-09">2025-06-09</a>
 
-                <br />
                 <h3 style="color: #333">Tailor Your Red Teaming with Custom Threats</h3>
                 <p style="color: #444; font-size: 16px">
                   You can now define your own custom threats when creating <a href="https://docs.galtea.ai/concepts/product/test/red-teaming-tests" style="color: #5c5bdd">Red Teaming Tests</a>. This new capability allows you to create highly specific adversarial tests that target the unique
                   vulnerabilities of your AI product.
                 </p>
 
-                <br />
                 <h3 style="color: #333">New Red Teaming Strategies: RolePlay and Prefix Injection</h3>
                 <p style="color: #444; font-size: 16px">We've expanded our arsenal of <a href="https://docs.galtea.ai/concepts/product/test/red-teaming-strategies" style="color: #5c5bdd">Red Teaming Strategies</a> to help you build more robust AI defenses:</p>
                 <ul style="color: #444; font-size: 16px">
@@ -35,7 +50,6 @@
                   <li><strong>Prefix Injection:</strong> Adds a misleading or tactical instruction before the actual threat to influence model behavior.</li>
                 </ul>
 
-                <br />
                 <h3 style="color: #333">Introducing the Misuse Resilience Metric</h3>
                 <p style="color: #444; font-size: 16px">
                   A new Red Teaming metric, <strong><a href="https://docs.galtea.ai/concepts/metric/misuse-resilience" style="color: #5c5bdd">Misuse Resilience</a></strong
@@ -43,7 +57,6 @@
                   on-task and doesn't get diverted into performing unintended actions.
                 </p>
 
-                <br />
                 <h3 style="color: #333">Enhanced Test Case Management: Mark as Reviewed</h3>
                 <p style="color: #444; font-size: 16px">
                   To improve collaboration for human annotation teams, <a href="https://docs.galtea.ai/concepts/product/test/case" style="color: #5c5bdd">Test Cases</a> can now be marked as "reviewed." This helps you track which test cases have been validated and see who performed the review,
