--- a/snippets/changelog/2025-07-28.html
+++ b/snippets/changelog/2025-07-28.html
@@ -4,6 +4,23 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Galtea Update - 2025-07-28</title>
+    <style>
+      /* Add a bit of vertical spacing between list items */
+      ul li {
+        margin-bottom: 8px;
+      }
+      /* Avoid extra space after the last item in a list */
+      ul li:last-child {
+        margin-bottom: 0;
+      }
+      h3 {
+        margin-top: 30px;
+        margin-bottom: 0px;
+      }
+      p {
+        margin-top: 10px;
+      }
+    </style>
   </head>
   <body style="margin: 0; padding: 0; text-align: center; font-family: Poppins, Arial, sans-serif">
     <table role="presentation" width="100%" cellspacing="0" cellpadding="0" border="0">
@@ -20,14 +37,12 @@
                 <h1 style="color: #333; font-size: 26px; margin-top: 30px; margin-bottom: 0px">New Evaluator Models, Classic Metrics, and Dashboard Redesign</h1>
                 <a style="color: #5c5bdd; font-size: 12px; text-decoration: none" href="https://docs.galtea.ai/changelog#2025-07-28">2025-07-28</a>
 
-                <br />
                 <h3 style="color: #333">Expanded Evaluator Model Support</h3>
                 <p style="color: #444; font-size: 16px">
                   We've added support for more evaluator models: <strong>Gemini-2.5-Flash</strong>, <strong>Gemini-2.5-Flash-Lite</strong>, and <strong>Gemini-2.0-Flash</strong>. You can now
                   <a href="https://docs.galtea.ai/concepts/metric" style="color: #5c5bdd">link these models to specific Metrics</a> for consistent evaluation results and leverage specialized models for different scenarios.
                 </p>
 
-                <br />
                 <h3 style="color: #333">Enhanced Conversation Simulation</h3>
                 <p style="color: #444; font-size: 16px">Testing conversational AI just got more powerful with two major improvements:</p>
                 <ul style="color: #444; font-size: 16px">
@@ -35,7 +50,6 @@
                   <li><strong>Custom User Persona Definitions:</strong> Create highly specific synthetic user personas when generating <a href="https://docs.galtea.ai/concepts/product/test/scenario-tests" style="color: #5c5bdd">Scenario Based Tests</a> to test diverse user interactions.</li>
                 </ul>
 
-                <br />
                 <h3 style="color: #333">Classic NLP Metrics Now Available</h3>
                 <p style="color: #444; font-size: 16px">We've expanded our metric library with three essential deterministic metrics:</p>
                 <ul style="color: #444; font-size: 16px">
@@ -50,14 +64,12 @@
                   </li>
                 </ul>
 
-                <br />
                 <h3 style="color: #333">Enhanced Red Teaming with Jailbreak Resilience v2</h3>
                 <p style="color: #444; font-size: 16px">
                   Security testing gets an upgrade with <strong><a href="https://docs.galtea.ai/concepts/metric/jailbreak-resilience-v2" style="color: #5c5bdd">Jailbreak Resilience v2</a></strong
                   >, an improved version of our jailbreak resistance metric that provides more comprehensive assessment of your model's ability to resist adversarial prompts and maintain safety boundaries.
                 </p>
 
-                <br />
                 <h3 style="color: #333">Dashboard Redesign: First Iteration</h3>
                 <p style="color: #444; font-size: 16px">We've launched the first iteration of our redesigned dashboard with a refreshed visual language focused on clarity and usability:</p>
                 <ul style="color: #444; font-size: 16px">
@@ -67,7 +79,6 @@
                   <li><strong>Updated Login Experience:</strong> A more polished and user-friendly authentication flow.</li>
                 </ul>
 
-                <br />
                 <h3 style="color: #333">Improved SDK Documentation</h3>
                 <p style="color: #444; font-size: 16px">
                   We've enhanced our <a href="https://docs.galtea.ai/sdk/api/metrics/create#param-evaluator-model-name" style="color: #5c5bdd">SDK documentation</a> with clearer guidance on defining evaluator models for metrics, making it easier to configure and customize your evaluation workflows.
