--- a/snippets/changelog/2025-09-08.html
+++ b/snippets/changelog/2025-09-08.html
@@ -7,6 +7,23 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Geist:wght@100..900&display=swap" rel="stylesheet" />
+    <style>
+      /* Add a bit of vertical spacing between list items */
+      ul li {
+        margin-bottom: 8px;
+      }
+      /* Avoid extra space after the last item in a list */
+      ul li:last-child {
+        margin-bottom: 0;
+      }
+      h3 {
+        margin-top: 30px;
+        margin-bottom: 0px;
+      }
+      p {
+        margin-top: 10px;
+      }
+    </style>
   </head>
   <body style="margin: 0; padding: 0; text-align: center; font-family: Geist, Poppins, Arial, sans-serif; background-color: #f6f6f5">
     <table role="presentation" width="100%" cellspacing="0" cellpadding="0" border="0">
@@ -23,7 +40,6 @@
                 <h1 style="color: #171717; font-size: 26px; margin-bottom: 0px">Smarter Simulations, Bulk Uploads, and Streamlined Onboarding</h1>
                 <a style="color: #5286ff; font-size: 12px; text-decoration: none" href="https://docs.galtea.ai/changelog#2025-09-08">2025-09-08</a>
 
-                <br />
                 <h3 style="color: #171717">More Realistic Conversation Simulations</h3>
                 <p style="color: #171717; font-size: 16px">
                   Our <a href="https://docs.galtea.ai/concepts/product/test/case/conversation-simulator" style="color: #5286ff">Conversation Simulator</a> has been significantly upgraded to generate more realistic, human-like interactions. Conversations generated are now linked to the specific
@@ -31,21 +47,18 @@
                 </p>
                 <p style="color: #171717; font-size: 16px; border-left: 4px solid #c8f25f; padding-left: 15px; margin-left: 10px"><strong>Note:</strong> To enable version tracking for simulated conversations, please upgrade to Galtea SDK version 1.8.1 or higher.</p>
 
-                <br />
                 <h3 style="color: #171717">Bulk Document Uploads for Test Generation</h3>
                 <p style="color: #171717; font-size: 16px">
                   You can now upload multiple files at once using <strong>ZIP archives</strong> to generate comprehensive <a href="https://docs.galtea.ai/concepts/product/test" style="color: #5286ff">test suites</a>. This feature streamlines the process of creating tests from large document
                   collections, saving you time and effort.
                 </p>
 
-                <br />
                 <h3 style="color: #171717">Streamlined Onboarding Experience</h3>
                 <p style="color: #171717; font-size: 16px">
                   Getting started with a new <a href="https://docs.galtea.ai/concepts/product" style="color: #5286ff">product</a> is now faster than ever. When you create a new product, an initial <a href="https://docs.galtea.ai/concepts/product/version" style="color: #5286ff">version</a> is now
                   created automatically, helping you get to your first evaluation more quickly.
                 </p>
 
-                <br />
                 <h3 style="color: #171717">Enhanced Document Processing</h3>
                 <p style="color: #171717; font-size: 16px">We've improved our backend for processing documents used in test generation. This enhancement leads to more accurate and relevant test cases being created from your knowledge bases.</p>
 
