--- a/snippets/changelog/2025-09-22.html
+++ b/snippets/changelog/2025-09-22.html
@@ -7,6 +7,23 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Geist:wght@100..900&display=swap" rel="stylesheet" />
+    <style>
+      /* Add a bit of vertical spacing between list items */
+      ul li {
+        margin-bottom: 8px;
+      }
+      /* Avoid extra space after the last item in a list */
+      ul li:last-child {
+        margin-bottom: 0;
+      }
+      h3 {
+        margin-top: 30px;
+        margin-bottom: 0px;
+      }
+      p {
+        margin-top: 10px;
+      }
+    </style>
   </head>
   <body style="margin: 0; padding: 0; text-align: center; font-family: Geist, Poppins, Arial, sans-serif; background-color: #f6f6f5">
     <table role="presentation" width="100%" cellspacing="0" cellpadding="0" border="0">
@@ -23,7 +40,6 @@
                 <h1 style="color: #171717; font-size: 26px; margin-bottom: 0px">Consistent Sorting, Improved Navigation, and SAML SSO</h1>
                 <a style="color: #5286ff; font-size: 12px; text-decoration: none" href="https://docs.galtea.ai/changelog#2025-09-22">2025-09-22</a>
 
-                <br />
                 <h3 style="color: #171717">Consistent Sorting and Enhanced Navigation</h3>
                 <p style="color: #171717; font-size: 16px">
                   We've made significant usability improvements to the platform. Table sorting is now persistent, so you can navigate away or refresh the page and your chosen sort order will remain. Additionally, navigating from an
@@ -33,7 +49,6 @@
                   <img src="https://mintlify.s3.us-west-1.amazonaws.com/galtea/images/changelog/2025-09-22_evaluation-navigation.png" alt="Right-click navigation from the Evaluation table" style="max-width: 100%; height: auto; border-radius: 8px" />
                 </div>
 
-                <br />
                 <h3 style="color: #171717">Upvote and Downvote Test Cases</h3>
                 <p style="color: #171717; font-size: 16px">
                   To help teams better curate their test suites, we've introduced a voting system. You can now upvote or downvote <a href="https://docs.galtea.ai/concepts/product/test/case" style="color: #5286ff">Test Cases</a> directly from the Dashboard, providing a quick feedback loop on test
@@ -43,17 +58,14 @@
                   <img src="https://mintlify.s3.us-west-1.amazonaws.com/galtea/images/changelog/2025-09-22_test-case-voting.png" alt="Upvote and downvote buttons for Test Cases" style="max-width: 100%; height: auto; border-radius: 8px" />
                 </div>
 
-                <br />
                 <h3 style="color: #171717">SAML SSO Authentication</h3>
                 <p style="color: #171717; font-size: 16px">Organizations can now enhance their security by configuring SAML SSO for authentication, allowing for seamless and secure access to the Galtea platform through your existing identity provider.</p>
 
-                <br />
                 <h3 style="color: #171717">Improved Misuse Resilience Metric</h3>
                 <p style="color: #171717; font-size: 16px">
                   The <a href="https://docs.galtea.ai/concepts/metric/misuse-resilience" style="color: #5286ff">Misuse Resilience</a> metric has been enhanced to accept the full product context, allowing for a more accurate and comprehensive evaluation of your model's ability to resist misuse.
                 </p>
 
-                <br />
                 <h3 style="color: #171717">New Analytics Filter</h3>
                 <p style="color: #171717; font-size: 16px">The analytics page now includes a filter for Test Case language. This allows you to narrow down your analysis and gain more precise insights into the performance of your multilingual models.</p>
 
