--- a/snippets/changelog/2025-04-28.html
+++ b/snippets/changelog/2025-04-28.html
@@ -4,6 +4,23 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Galtea Update - 2025-04-28</title>
+    <style>
+      /* Add a bit of vertical spacing between list items */
+      ul li {
+        margin-bottom: 8px;
+      }
+      /* Avoid extra space after the last item in a list */
+      ul li:last-child {
+        margin-bottom: 0;
+      }
+      h3 {
+        margin-top: 30px;
+        margin-bottom: 0px;
+      }
+      p {
+        margin-top: 10px;
+      }
+    </style>
   </head>
   <body style="margin: 0; padding: 0; text-align: center; font-family: Poppins, Arial, sans-serif">
     <table role="presentation" width="100%" cellspacing="0" cellpadding="0" border="0">
@@ -20,21 +37,18 @@
                 <h1 style="color: #333; font-size: 26px; margin-top: 30px; margin-bottom: 0px">Monitorization and UI Improvements</h1>
                 <a style="color: #5c5bdd; font-size: 12px; text-decoration: none" href="https://docs.galtea.ai/changelog#2025-04-28">2025-04-28</a>
 
-                <br />
                 <h3 style="color: #333">Monitoring Is Live!</h3>
                 <p style="color: #444; font-size: 16px">
                   Real-world user interactions with your products can now be fully monitored and analyzed. Using the Galtea SDK, you can trigger evaluations in a production environment and view how different versions perform with real users.
                   <a href="https://docs.galtea.ai/sdk/api/evaluation/service#monitoring-user-interactions-in-production" style="color: #5c5bdd">Read more here</a>.
                 </p>
 
-                <br />
                 <h3 style="color: #333">Improved Galtea Red Teaming Tests</h3>
                 <p style="color: #444; font-size: 16px">
                   Our simulation-generated tests have been upgraded—delivering higher-quality outcomes. Red teaming tests can now validate more specific aspects of standards such as OWASP, MITRE ATLAS, and NIST. We've improved <strong>jailbreak</strong> attacks, and added new
                   <strong>financial attacks</strong> and <strong>toxicity</strong> prompts.
                 </p>
 
-                <br />
                 <h3 style="color: #333">New Analytics Page</h3>
                 <p style="color: #444; font-size: 16px">A completely redesigned analytics page is now available! It features:</p>
                 <ul style="color: #444; font-size: 16px">
@@ -46,7 +60,6 @@
                 </div>
                 <blockquote style="color: #666; font-style: italic; font-size: 14px; margin-top: 10px">And with monitoring active, you can see production evaluation results in real time on this page!</blockquote>
 
-                <br />
                 <h3 style="color: #333">User Experience Enhancements</h3>
                 <p style="color: #444; font-size: 16px">We're continuously refining the platform based on your feedback. This week's improvements include:</p>
                 <ul style="color: #444; font-size: 16px">
