--- a/snippets/changelog/2025-06-23.html
+++ b/snippets/changelog/2025-06-23.html
@@ -4,6 +4,23 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Galtea Update - 2025-06-23</title>
+    <style>
+      /* Add a bit of vertical spacing between list items */
+      ul li {
+        margin-bottom: 8px;
+      }
+      /* Avoid extra space after the last item in a list */
+      ul li:last-child {
+        margin-bottom: 0;
+      }
+      h3 {
+        margin-top: 30px;
+        margin-bottom: 0px;
+      }
+      p {
+        margin-top: 10px;
+      }
+    </style>
   </head>
   <body style="margin: 0; padding: 0; text-align: center; font-family: Poppins, Arial, sans-serif">
     <table role="presentation" width="100%" cellspacing="0" cellpadding="0" border="0">
@@ -20,21 +37,18 @@
                 <h1 style="color: #333; font-size: 26px; margin-top: 30px; margin-bottom: 0px">Quality Test Generation, Metric Tags, and Product Details</h1>
                 <a style="color: #5c5bdd; font-size: 12px; text-decoration: none" href="https://docs.galtea.ai/changelog#2025-06-23">2025-06-23</a>
 
-                <br />
                 <h3 style="color: #333">Generate Quality Tests from Examples</h3>
                 <p style="color: #444; font-size: 16px">
                   You can now create Quality Tests directly from your own examples using the new <strong>Few Shots</strong> parameter. This makes it easier to tailor tests to your specific use cases and ensure your models are evaluated on the scenarios that matter most.
                   <a href="https://docs.galtea.ai/sdk/api/test/create" style="color: #5c5bdd; text-decoration: underline; margin-left: 5px">Learn more about test creation</a>
                 </p>
 
-                <br />
                 <h3 style="color: #333">Metric Tags</h3>
                 <p style="color: #444; font-size: 16px">
                   Metrics now support <strong>tags</strong> for easier classification and discovery. Quickly find and organize metrics relevant to your projects.
                   <a href="https://docs.galtea.ai/concepts/metric" style="color: #5c5bdd; text-decoration: underline; margin-left: 5px">See all metrics</a>
                 </p>
 
-                <br />
                 <h3 style="color: #333">Enhanced Product Details</h3>
                 <p style="color: #444; font-size: 16px">Products now include new detail fields:</p>
                 <ul style="color: #444; font-size: 16px">
@@ -47,17 +61,14 @@
                   <a href="https://docs.galtea.ai/concepts/product" style="color: #5c5bdd; text-decoration: underline; margin-left: 5px">Read about product details</a>
                 </p>
 
-                <br />
                 <h3 style="color: #333">Improved Q&A Generation</h3>
                 <p style="color: #444; font-size: 16px">Question-answer pairs are now generated with improved accuracy and clarity, thanks to better text filtering and processing.</p>
 
-                <br />
                 <h3 style="color: #333">New Guide: Setting Up Your Product Description</h3>
                 <p style="color: #444; font-size: 16px">
                   We've created a comprehensive guide to help you set up your product descriptions effectively. This guide covers best practices, examples, and tips to ensure your product is presented in the best light. Check it out
                   <a href="https://docs.galtea.ai/sdk/tutorials/create-product-description" style="color: #5c5bdd; text-decoration: underline; margin-left: 5px">here</a>
                 </p>
-                <br />
                 <h3 style="color: #333">General Improvements</h3>
                 <p style="color: #444; font-size: 16px">We've made various bug fixes and UX/UI improvements across the Dashboard, SDK, and more, making your experience smoother and more reliable.</p>
 
