--- a/snippets/changelog/2025-07-14.html
+++ b/snippets/changelog/2025-07-14.html
@@ -4,6 +4,23 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Galtea Update - 2025-07-14</title>
+    <style>
+      /* Add a bit of vertical spacing between list items */
+      ul li {
+        margin-bottom: 8px;
+      }
+      /* Avoid extra space after the last item in a list */
+      ul li:last-child {
+        margin-bottom: 0;
+      }
+      h3 {
+        margin-top: 30px;
+        margin-bottom: 0px;
+      }
+      p {
+        margin-top: 10px;
+      }
+    </style>
   </head>
   <body style="margin: 0; padding: 0; text-align: center; font-family: Poppins, Arial, sans-serif">
     <table role="presentation" width="100%" cellspacing="0" cellpadding="0" border="0">
@@ -20,7 +37,6 @@
                 <h1 style="color: #333; font-size: 26px; margin-top: 30px; margin-bottom: 0px">Conversation Simulation, New Metric, and Credit Management</h1>
                 <a style="color: #5c5bdd; font-size: 12px; text-decoration: none" href="https://docs.galtea.ai/changelog#2025-07-14">2025-07-14</a>
 
-                <br />
                 <h3 style="color: #333">Test Your Chatbots with Realistic Conversation Simulation</h3>
                 <p style="color: #444; font-size: 16px">
                   You can now evaluate your conversational AI with our new <strong><a href="https://docs.galtea.ai/concepts/conversation-simulator" style="color: #5c5bdd">Conversation Simulator</a></strong
@@ -28,7 +44,6 @@
                   our <a href="https://docs.galtea.ai/sdk/tutorials/simulating-conversations" style="color: #5c5bdd">step-by-step guide</a>.
                 </p>
 
-                <br />
                 <h3 style="color: #333">New Metric: Resilience To Noise</h3>
                 <p style="color: #444; font-size: 16px">
                   We've expanded our RAG metrics with <strong><a href="https://docs.galtea.ai/concepts/metric/resilience-to-noise" style="color: #5c5bdd">Resilience To Noise</a></strong
@@ -36,11 +51,9 @@
                   <a href="https://docs.galtea.ai/concepts/metric/resilience-to-noise" style="color: #5c5bdd">Learn more here</a>.
                 </p>
 
-                <br />
                 <h3 style="color: #333">Stay in Control with Enhanced Credit Management</h3>
                 <p style="color: #444; font-size: 16px">We've rolled out an improved credit management system to give you better control over your usage. It now includes proactive warnings when you approach your credit limits, helping you avoid service interruptions.</p>
 
-                <br />
                 <h3 style="color: #333">Streamlined Conversation Logging with OpenAI-Aligned Format</h3>
                 <p style="color: #444; font-size: 16px">
                   Logging entire conversations is now easier. We've aligned our <a href="https://docs.galtea.ai/sdk/api/inference-result/create-batch" style="color: #5c5bdd">batch creation method</a> with OpenAI's
