--- a/snippets/changelog/2025-08-11.html
+++ b/snippets/changelog/2025-08-11.html
@@ -4,6 +4,23 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Galtea Update - 2025-08-11</title>
+    <style>
+      /* Add a bit of vertical spacing between list items */
+      ul li {
+        margin-bottom: 8px;
+      }
+      /* Avoid extra space after the last item in a list */
+      ul li:last-child {
+        margin-bottom: 0;
+      }
+      h3 {
+        margin-top: 30px;
+        margin-bottom: 0px;
+      }
+      p {
+        margin-top: 10px;
+      }
+    </style>
   </head>
   <body style="margin: 0; padding: 0; text-align: center; font-family: Poppins, Arial, sans-serif">
     <table role="presentation" width="100%" cellspacing="0" cellpadding="0" border="0">
@@ -20,28 +37,24 @@
                 <h1 style="color: #333; font-size: 26px; margin-top: 30px; margin-bottom: 0px">Dashboard Enhancements: TestCase Management, Judge Templates, and System Resilience</h1>
                 <a style="color: #5c5bdd; font-size: 12px; text-decoration: none" href="https://docs.galtea.ai/changelog#2025-08-11">2025-08-11</a>
 
-                <br />
                 <h3 style="color: #333">Create and Edit TestCase Scenarios Directly in the Dashboard</h3>
                 <p style="color: #444; font-size: 16px">
                   You can now create and edit <strong><a href="https://docs.galtea.ai/concepts/product/test/scenario-tests" style="color: #5c5bdd">TestCase Scenarios</a></strong> directly through the Dashboard interface. This streamlined workflow allows you to define complex
                   <a href="https://docs.galtea.ai/sdk/tutorials/simulating-conversations" style="color: #5c5bdd">multi-turn conversation scenarios</a> without leaving the platform, making it easier to set up comprehensive testing workflows for your conversational AI systems.
                 </p>
 
-                <br />
                 <h3 style="color: #333">Smarter TestCase Dashboard with Dynamic Columns</h3>
                 <p style="color: #444; font-size: 16px">
                   We've improved the <a href="https://docs.galtea.ai/concepts/product/test/case" style="color: #5c5bdd">TestCase</a> Dashboard with smarter table displays that now only show columns relevant to each specific test. This reduces visual clutter and makes it easier to focus on the
                   information that matters most.
                 </p>
 
-                <br />
                 <h3 style="color: #333">Accelerate Metric Creation with Judge Templates</h3>
                 <p style="color: #444; font-size: 16px">
                   When creating <a href="https://docs.galtea.ai/concepts/metric/custom-judge" style="color: #5c5bdd">Judge metrics</a>, you can now select from pre-built judge templates to accelerate your metric setup process. This feature provides a starting point for common evaluation patterns
                   while still allowing full customization.
                 </p>
 
-                <br />
                 <h3 style="color: #333">Improved System Resilience</h3>
                 <p style="color: #444; font-size: 16px">We've enhanced our event handling infrastructure to provide better resilience against unexpected system events. These behind-the-scenes improvements help ensure that your tests and evaluations are preserved and continue running smoothly.</p>
 
