--- a/snippets/changelog/2025-09-01.html
+++ b/snippets/changelog/2025-09-01.html
@@ -7,6 +7,23 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Geist:wght@100..900&display=swap" rel="stylesheet" />
+    <style>
+      /* Add a bit of vertical spacing between list items */
+      ul li {
+        margin-bottom: 8px;
+      }
+      /* Avoid extra space after the last item in a list */
+      ul li:last-child {
+        margin-bottom: 0;
+      }
+      h3 {
+        margin-top: 30px;
+        margin-bottom: 0px;
+      }
+      p {
+        margin-top: 10px;
+      }
+    </style>
   </head>
   <body style="margin: 0; padding: 0; text-align: center; font-family: Geist, Poppins, Arial, sans-serif; background-color: #f6f6f5">
     <table role="presentation" width="100%" cellspacing="0" cellpadding="0" border="0">
@@ -23,7 +40,6 @@
                 <h1 style="color: #171717; font-size: 26px; margin-bottom: 0px">Galtea Rebranding, Enhanced Analytics, and Platform Security</h1>
                 <a style="color: #5286ff; font-size: 12px; text-decoration: none" href="https://docs.galtea.ai/changelog#2025-09-01">2025-09-01</a>
 
-                <br />
                 <h3 style="color: #171717">Fresh New Look: Galtea Rebranding is Live!</h3>
                 <p style="color: #171717; font-size: 16px">
                   We're excited to unveil Galtea's complete visual transformation! Our new branding includes a refreshed logo, updated slogan, and a modern look across the entire platform. Experience the new design on our
@@ -34,7 +50,6 @@
                   <img src="https://mintlify.s3.us-west-1.amazonaws.com/galtea/images/changelog/2025-09-01_rebranding.png" alt="Galtea Rebranding" style="max-width: 100%; height: auto; border-radius: 8px" />
                 </div>
 
-                <br />
                 <h3 style="color: #171717">Enhanced Analytics with Improved Version Comparisons</h3>
                 <p style="color: #171717; font-size: 16px">The Analytics views have received significant improvements to make data analysis more efficient and user-friendly. Key enhancements include:</p>
                 <ul style="color: #171717; font-size: 16px">
@@ -43,14 +58,12 @@
                   <li><strong>Improved Visual Clarity:</strong> Enhanced data presentation makes it easier to interpret results and make informed decisions about your AI systems.</li>
                 </ul>
 
-                <br />
                 <h3 style="color: #171717">Strengthened Authentication and Security</h3>
                 <p style="color: #171717; font-size: 16px">
                   We've implemented more secure and robust authentication mechanisms across the platform. These behind-the-scenes security enhancements provide better protection for your data and ensure reliable access to your Galtea workspace, giving you peace of mind when working with sensitive AI
                   evaluation data.
                 </p>
 
-                <br />
                 <h3 style="color: #171717">Advanced PDF Knowledge Extraction</h3>
                 <p style="color: #171717; font-size: 16px">
                   Our document processing capabilities have been significantly improved for PDF files. The enhanced extraction algorithms now provide more accurate and comprehensive knowledge retrieval from PDF documents, making it easier to create relevant test cases and evaluation scenarios from
