--- a/snippets/changelog/2025-09-29.html
+++ b/snippets/changelog/2025-09-29.html
@@ -7,6 +7,23 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Geist:wght@100..900&display=swap" rel="stylesheet" />
+    <style>
+      /* Add a bit of vertical spacing between list items */
+      ul li {
+        margin-bottom: 8px;
+      }
+      /* Avoid extra space after the last item in a list */
+      ul li:last-child {
+        margin-bottom: 0;
+      }
+      h3 {
+        margin-top: 30px;
+        margin-bottom: 0px;
+      }
+      p {
+        margin-top: 10px;
+      }
+    </style>
   </head>
   <body style="margin: 0; padding: 0; text-align: center; font-family: Geist, Poppins, Arial, sans-serif; background-color: #f6f6f5">
     <table role="presentation" width="100%" cellspacing="0" cellpadding="0" border="0">
@@ -23,7 +40,6 @@
                 <h1 style="color: #171717; font-size: 26px; margin-bottom: 0px">Generate Scenarios from Quality Tests, URL Validation, and Performance Boost</h1>
                 <a style="color: #5286ff; font-size: 12px; text-decoration: none" href="https://docs.galtea.ai/changelog#2025-09-29">2025-09-29</a>
 
-                <br />
                 <h3 style="color: #171717">Create Conversational Scenarios from Your Quality Tests</h3>
                 <p style="color: #171717; font-size: 16px">
                   You can now generate comprehensive <a href="https://docs.galtea.ai/concepts/product/test/scenario-tests" style="color: #5286ff">Scenario Based Tests</a> directly from your existing
@@ -31,14 +47,12 @@
                   of your AI's dialogue capabilities.
                 </p>
 
-                <br />
                 <h3 style="color: #171717">New Deterministic Metric: URL Validation</h3>
                 <p style="color: #171717; font-size: 16px">
                   We've added the <a href="https://docs.galtea.ai/concepts/metric/url-validation" style="color: #5286ff">URL Validation</a> metric to our deterministic evaluation suite. It ensures that all URLs in your model’s output are safe, properly formatted with HTTPS, and resolvable. It
                   includes strict validation and SSRF protection, making it essential for any application that generates external links.
                 </p>
 
-                <br />
                 <h3 style="color: #171717">Platform Enhancements and Performance Boost</h3>
                 <p style="color: #171717; font-size: 16px">
                   We've rolled out major performance improvements across the platform, with a special focus on the analytics views, making them faster and more responsive. This update also includes several minor visual fixes to provide a smoother and more polished user experience.
