--- a/snippets/changelog/2025-10-06.html
+++ b/snippets/changelog/2025-10-06.html
@@ -7,6 +7,23 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Geist:wght@100..900&display=swap" rel="stylesheet" />
+    <style>
+      /* Add a bit of vertical spacing between list items */
+      ul li {
+        margin-bottom: 8px;
+      }
+      /* Avoid extra space after the last item in a list */
+      ul li:last-child {
+        margin-bottom: 0;
+      }
+      h3 {
+        margin-top: 30px;
+        margin-bottom: 0px;
+      }
+      p {
+        margin-top: 10px;
+      }
+    </style>
   </head>
   <body style="margin: 0; padding: 0; text-align: center; font-family: Geist, Poppins, Arial, sans-serif; background-color: #f6f6f5">
     <table role="presentation" width="100%" cellspacing="0" cellpadding="0" border="0">
@@ -23,40 +40,34 @@
                 <h1 style="color: #171717; font-size: 26px; margin-bottom: 0px">Platform Simplification, New Metrics, Scenarios & Performance Boost</h1>
                 <a style="color: #5286ff; font-size: 12px; text-decoration: none" href="https://docs.galtea.ai/changelog#2025-10-06">2025-10-06</a>
 
-                <br />
                 <h3 style="color: #171717">Platform Simplification and SDK v3.0</h3>
                 <p style="color: #171717; font-size: 16px">
                   We've simplified core concepts to make the platform more intuitive. For example, `Evaluation Tasks` are now simply <a href="https://docs.galtea.ai/concepts/product/version/session/evaluation" style="color: #5286ff">Evaluations</a>. These changes come with a major SDK release — see
                   the <a href="https://docs.galtea.ai/migration-to-v3" style="color: #5286ff">Migration to v3.0 guide</a> for details.
                 </p>
 
-                <br />
                 <h3 style="color: #171717">New Conversational Metrics</h3>
                 <p style="color: #171717; font-size: 16px">
                   Introducing two conversational metrics: <a href="https://docs.galtea.ai/concepts/metric/user-objective-accomplished" style="color: #5286ff">User Objective Accomplished</a> and
                   <a href="https://docs.galtea.ai/concepts/metric/user-satisfaction" style="color: #5286ff">User Satisfaction</a>, to better capture multi-turn success and perceived quality.
                 </p>
 
-                <br />
                 <h3 style="color: #171717">Generate Scenarios from Quality Tests</h3>
                 <p style="color: #171717; font-size: 16px">
                   You can now create multi-turn <a href="https://docs.galtea.ai/concepts/product/test/scenario-tests" style="color: #5286ff">Scenario Based Tests</a> directly from existing <a href="https://docs.galtea.ai/concepts/product/test/quality-tests" style="color: #5286ff">Quality Tests</a>,
                   turning single-turn gold tests into realistic conversational flows for deeper evaluation.
                 </p>
 
-                <br />
                 <h3 style="color: #171717">URL Validation & Deterministic Checks</h3>
                 <p style="color: #171717; font-size: 16px">
                   Added a deterministic <a href="https://docs.galtea.ai/concepts/metric/url-validation" style="color: #5286ff">URL Validation</a> metric that verifies HTTPS, formatting, resolvability and includes SSRF protections — useful when models emit external links.
                 </p>
 
-                <br />
                 <h3 style="color: #171717">Enhanced Test Case Feedback & SDK Filters</h3>
                 <p style="color: #171717; font-size: 16px">
                   You can now add a "user score reason" when voting on a <a href="https://docs.galtea.ai/concepts/product/test/case" style="color: #5286ff">Test Case</a>, and the SDK supports filtering by score and fetching objects in batches (pass a list of IDs).
                 </p>
 
-                <br />
                 <h3 style="color: #171717">Dashboard Usability & Performance</h3>
                 <p style="color: #171717; font-size: 16px">Dashboard UX improvements include one-click copy of table rows and right-click navigation. We also shipped platform-wide performance boosts, especially in analytics views, for a snappier experience.</p>
 
